k8s-manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordsmith
  name: api
  labels:
    app: api-service-app
spec:
  selector:
    app: api-pod-deploy-app
  ports:
    - port: 8080
      targetPort: 8080
      name: api
  clusterIP: None

---
