k8s-manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordsmith
  name: db
  labels:
    app: db-service-app
spec:
  clusterIP: None
  selector:
    app: db-pod-deploy-app
  ports:
    - port: 5432
      targetPort: 5432
---
