k8s-manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordsmith
  name: web-service
  labels:
    app: web-service-app
spec:
  selector:
    app: web-pod-deploy-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
---
