k8s-manifests/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: wordsmith
  name: access-db
  labels:
    app: db-access
spec:
  podSelector:
    matchLabels:
      app: db-pod-deploy-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-pod-deploy-app
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: wordsmith
  name: access-api
  labels:
    app: api-access
spec:
  podSelector:
    matchLabels:
      app: api-pod-deploy-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web-pod-deploy-app
      ports:
        - protocol: TCP
          port: 8080
  egress:
    # 1. Allow traffic to DB pod on port 5432
    - to:
        - podSelector:
            matchLabels:
              app: db-pod-deploy-app
      ports:
        - protocol: TCP
          port: 5432
    # 2. Allow DNS lookup (port 53) so API pod can resolve DB service hostname
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
